<resources>
    <string name="app_name">IGProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Caricamento...</string>
    <string name="loadingData">Caricamento Dati...</string>
    <string name="news_fragment">News:</string>
    <string name="city_name">Venezia</string>
    <string name="_8am">8am</string>
    <string name="_12am">12am</string>
    <string name="_4pm">4pm</string>
    <string name="_8pm">8pm</string>
    <string name="attendanceIntroduction">Quanto è affollata Venezia questa settimana?</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>