<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <!-- Bar 1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/bar1"
                            android:layout_width="8dp"
                            android:layout_height="10dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="10dp"
                            android:background="@color/green"
                            android:orientation="vertical" />

                        <TextView
                            android:id="@+id/time1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_8am"
                            android:textColor="@color/orange"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Bar 2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/bar2"
                            android:layout_width="8dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="10dp"
                            android:background="@color/orange"
                            android:orientation="vertical" />

                        <TextView
                            android:id="@+id/time2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_12am"
                            android:textColor="@color/orange"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Bar 3 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/bar3"
                            android:layout_width="8dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="10dp"
                            android:background="@color/red"
                            android:orientation="vertical" />

                        <TextView
                            android:id="@+id/time3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_4pm"
                            android:textColor="@color/orange"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Bar 4 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/bar4"
                            android:layout_width="8dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="10dp"
                            android:background="@color/yellow"
                            android:orientation="vertical" />

                        <TextView
                            android:id="@+id/time4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_8pm"
                            android:textColor="@color/orange"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <!-- Shadow bar -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="invisible">

                    <View
                        android:layout_width="8dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="10dp"
                        android:background="@color/red"
                        android:orientation="vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:gravity="center_horizontal"
                        android:text="4pm"
                        android:textColor="@color/orange"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/dayAttendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mercoledì"
                android:textStyle="bold"
                android:textColor="@color/bluish_black"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>